# nirmana

./: .env.example  .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  setup.sh
nirmaha/: hooks.py  modules.txt
nirmaha/public/css/: nirmaha.css
nirmaha/public/js/: nirmaha.js
nirmana/: hooks.py  modules.txt
nirmana/public/css/: nirmaha.css
nirmana/public/js/: nirmana.js
requirements/: BUSINESS-LOGIC.md  BUSINESS-REQUIREMENTS.md  DOCTYPES.md  README.md  STAGING-SETUP.md  TIME-ESTIMATE.md  requirement-discussion.md
